# numerical_analysis

./: .gitignore  CMakeLists.txt  README.md  get_font.py
docs/: development_guide.md
include/: interpolation.h
include/interpolation/: interpolation.h
src/: CMakeLists.txt  interpolation.cpp
src/interpolation/: interpolation.cpp  lagrange_interpolator.cpp
src/python/interpolation/: interpolation.py  main.py  plot.py
tests/: CMakeLists.txt  interpolation.py  test_linear_system.py
